# DevIncBase

./: CMakeLists.txt
AntiPlagiarism/: main.cpp
Bishops/: main.cpp
CPP-TASKS/: fateNumber.cpp  horses.cpp  multTable.cpp  mutants.cpp
CoffeeBox/: main.cpp
GameOfLife/: main.cpp
Knights/: main.cpp
Ladder/Currency/: main.cpp
Ladder/One/TaskFive/: main.cpp
Ladder/One/TaskFour/: main.cpp
Ladder/One/TaskSix/: main.cpp
Ladder/One/TaskThree/: main.cpp
Ladder/One/TaskTwo/: main.cpp
Ladder/TaskFive/: main.cpp
Ladder/TaskSeven/: main.cpp
Ladder/TaskSix/: main.cpp
Ladder/TaskThree/: main.cpp
Ladder/TaskTwo/: main.cpp
MultiplicationTable/: main.cpp
Mutants/: main.cpp
NumberOfFate/: main.cpp
SeaBattle/: Cell.cpp  Cell.h  Preset.cpp  Preset.h  SeaBattleGame.cpp  SeaBattleGame.h  main.cpp  readme.txt
SprintThree/CubeGap/: main.cpp  testcases.txt
SprintThree/RadicalHeights/: debug.cpp  main.cpp
SprintThree/Recruits/: main.cpp
SprintTwo/IndustrialCase/: main.cpp
SprintTwo/ReverseNumber/: main.cpp
SprintTwo/Rotation/: main.cpp
TicTac/: main.cpp
Tree/: main.cpp
bishops/: bishops.cpp
horses/: horses.cpp
