cmake_minimum_required(VERSION 3.22)
project(DevIncBase)

set(CMAKE_CXX_STANDARD 14)

add_executable(Ladder_Currency Ladder/Currency/main.cpp)
add_executable(CoffeeBox CoffeeBox/main.cpp)
add_executable(Rotation SprintTwo/Rotation/main.cpp)
add_executable(IndustrialCase SprintTwo/IndustrialCase/main.cpp)